# nautobot-renderer

./: .gitignore  DEPLOYMENT.md  docker-compose.test.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  e2e-tests.yml  performance.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  schema.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: __init__.py  schema.py
backend/app/services/: exceptions.py  nautobot_client.py  schema_transformer.py
backend/data/: api_v1_schema_discover.json  edge_connection_analysis.md  missing_nodes_analysis.json  node_edge_connection_issue.md  node_id_mapping.json  response_statistics.json  sample_nodes.json  sample_relationships.json
backend/tests/: __init__.py  test_nautobot_client.py
frontend/: IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_REPORT.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/.claude/agents/: ci-dev.md
frontend/scripts/: dev-server.js
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/components/: DebugConsole.tsx  SchemaApiDemo.tsx  SimpleApiDemo.tsx
frontend/src/hooks/: useSchema.ts  useSchemaVisualization.ts
frontend/src/services/: SCHEMA_SERVICE_ENHANCEMENT_REPORT.md  demo-error-scenarios.ts  schema.service.ts
frontend/src/styles/: animations.css  components.css  react-flow-overrides.css  variables.css
frontend/src/types/: index.ts  schema.ts
frontend/src/utils/: PRIMARY_FIELD_ANALYSIS.md  config.ts  coreNodesConfig.ts  demoData.ts  fieldPriorityCalculator.ts  nodeColors.ts  primaryFieldFilter.ts  (+4 more)
(+26 files in other folders)
